--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
        <div class="col-4" id="main_display" >
 <div id="control_panel">
         <div class="img-container">
-          <img class="_logo"src="/Images/logo.png" alt="Logo with pink background an illustration of a wine glass and the words date night" >
+          <img class="_logo"src="Images/logo.png" alt="Logo with pink background an illustration of a wine glass and the words date night" >
           <div class="heart"></div> 
        
       </div>
