--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
      <div class="col-4">
        <div class="player-container">
        <div id="player-1" class="player-name">
-         <h3 style="color:#002332;" > Nav </h3>
+         <h3 style="color:#002332;" > XY </h3>
        </div>
         
        </div>
@@ -44,7 +44,7 @@
        <div class="col-4">
         <div class="player-container">
         <div id="player-2" class="player-name">
-          <h3 style= "color: pink;"> Ki </h3>
+          <h3 style= "color: pink;"> XX </h3>
        </div>
        
      </div>
